@@ -1,3 +1,5 @@
+(require 'rails)
+
 (mapcar
  #'byte-compile-file
  (directory-files "./" t "\\.el$"))
